fix nav on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -28,7 +28,7 @@ p {
   padding-right: 20px; }
 
 .nav-pills .nav-link.active:hover, #contact input.btn.btn-lg:hover {
-  background-color: #ed9051; }
+  background-color: #ed9051!important; }
 
 .navbar {
   -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12);
@@ -58,13 +58,7 @@ img.why-icon {
 .how-accordian a:hover, .how-accordian a:focus {
   text-decoration: none; }
 
-/*#headingOne {
-  border-top: 110px solid transparent;
-  margin-top: -110px;
-  -webkit-background-clip: padding-box;
-  -moz-background-clip: padding;
-  background-clip: padding-box;
-}*/
+
 .card .hide {
   display: none; }
 
@@ -109,3 +103,13 @@ img.why-icon {
 
 #contact label {
   font-size: 1.25rem; }
+
+@media only screen and (max-width: 767px)  {
+
+  #Why, #how, #about, #contact {
+      padding-top: 224px;
+      margin-top: -224px;
+      -webkit-background-clip: content-box;
+      background-clip: content-box;
+  }
+}
